--- a/app/src/main/res/layout/activity_reservations.xml
+++ b/app/src/main/res/layout/activity_reservations.xml
@@ -36,7 +36,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:id="@+id/Reservation1">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="330dp"
