--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/login_bg"
-    tools:context=".Login">
+    tools:context=".signup">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -28,10 +28,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="35dp"
-                android:text="Login"
+                android:text="Sign up"
                 android:textColor="@color/black"
                 android:textSize="30sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
 
             <EditText
@@ -39,8 +39,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="30dp"
-                android:layout_marginEnd="30dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginEnd="30dp"
                 android:background="@drawable/custom_edittext"
                 android:hint="Email"
                 android:padding="15dp"
@@ -50,40 +50,14 @@
                 android:id="@+id/txtPass"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginStart ="30dp"
-                android:layout_marginEnd="30dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="15dp"
+                android:layout_marginEnd="30dp"
                 android:background="@drawable/custom_edittext"
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:padding="15dp"
                 android:textColor="@color/black" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:id="@+id/remember_me_loginpage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
-                    android:text="Remember Me"
-                    android:textColor="@color/black">
-
-                </CheckBox>
-
-                <TextView
-                    android:id="@+id/forgotPass"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="110dp"
-                    android:text="Forgot Password?"
-                    android:textColor="@color/black">
-
-                </TextView>
-            </LinearLayout>
 
         </LinearLayout>
 
@@ -91,22 +65,22 @@
             android:id="@+id/loginButton"
             android:layout_width="178dp"
             android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
             android:backgroundTint="@color/black"
-            android:onClick="login"
-            android:text="LOGIN"
+            android:onClick="signup"
+            android:text="Register"
             android:textColor="@color/white"
             android:textSize="15sp"
-            app:cornerRadius="20dp"
-            android:layout_marginTop="30px"
-            android:layout_gravity="center_horizontal"/>
+            app:cornerRadius="20dp" />
 
         <TextView
-            android:id="@+id/spanSignup"
+            android:id="@+id/spanLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
-            android:text="Don't Have an account? "
+            android:text="Go Back to Login"
             android:textColor="@color/black" />
 
     </LinearLayout>
@@ -127,6 +101,7 @@
         android:id="@+id/dr_logo_loginpage"
         android:layout_width="167dp"
         android:layout_height="58dp"
+        android:layout_marginTop="255dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.934"
