--- a/app/src/main/res/layout/activity_reservation_details.xml
+++ b/app/src/main/res/layout/activity_reservation_details.xml
@@ -62,7 +62,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:layout_gravity="center_horizontal"
-                    android:text="Reservation Detais"
+                    android:text="Reservation Details"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     android:textStyle="bold" />
