--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -54,7 +54,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/custom_edittext"
-                android:hint="Password"
+                android:hint="Create Password"
                 android:inputType="textPassword"
                 android:padding="15dp"
                 android:textColor="@color/black" />
