--- a/app/src/main/res/layout/activity_admin_history_details.xml
+++ b/app/src/main/res/layout/activity_admin_history_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -14,10 +14,11 @@
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="37dp"
-            android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginEnd="21dp"
             app:cardBackgroundColor="#927d52">
 
             <TextView
@@ -34,9 +35,10 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/reminders_cardview_typing_area"
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_marginStart="21dp"
+            android:layout_marginEnd="21dp"
             app:cardBackgroundColor="#161f48">
 
             <LinearLayout
@@ -377,10 +379,11 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/reservation_details_date_status_cardview_area"
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginEnd="21dp"
             app:cardBackgroundColor="#161f48">
 
             <LinearLayout
@@ -527,4 +530,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
