--- a/app/src/main/res/layout/activity_admin_reservations.xml
+++ b/app/src/main/res/layout/activity_admin_reservations.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -11,13 +11,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="110dp"
+            android:layout_width="390dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:orientation="horizontal">
 
             <Button
@@ -25,32 +24,30 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="60dp"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="45dp"
                 android:layout_weight="1"
                 android:backgroundTint="#161f48"
-                android:textAlignment="center"
                 android:fontFamily="sans-serif-medium"
-                android:textSize="16dp"
                 android:text="Upcoming"
-                android:textStyle="bold"/>
+                android:textAlignment="center"
+                android:textSize="16dp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/button2"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginTop="60dp"
+                android:layout_marginLeft="-20dp"
+                android:layout_marginTop="45dp"
                 android:layout_marginRight="60dp"
                 android:layout_weight="1"
                 android:backgroundTint="#d8e1e8"
-                android:text="History"
-                android:textSize="16dp"
                 android:fontFamily="sans-serif-medium"
+                android:onClick="History"
+                android:text="History"
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                android:layout_marginLeft="-20dp"
-                android:onClick="History"/>
-
-
+                android:textSize="16dp"
+                android:textStyle="bold" />
         </LinearLayout>
 
 
@@ -61,7 +58,7 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
@@ -71,45 +68,59 @@
                 android:textSize="20dp"
                 android:textStyle="italic" />
 
-            <LinearLayout
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="330dp"
-                    android:layout_height="50dp"
+                <LinearLayout
+                    android:id="@+id/Reservation1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="15dp"
-                    app:cardBackgroundColor="#12264D"
-                    app:cardCornerRadius="1dp">
+                    android:layout_marginEnd="20dp"
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/textView4"
-                        android:layout_width="324dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginStart="10dp"
-                        android:fontFamily="sans-serif-medium"
-                        android:text="Reference Number: LRCDR-00002"
-                        android:textColor="@color/white"
-                        android:textSize="16dp" />
-                </androidx.cardview.widget.CardView>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="45dp"
+                        android:layout_marginTop="15dp"
+                        app:cardBackgroundColor="#12264D"
+                        app:cardCornerRadius="8dp">
 
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginStart="-1dp"
-                    android:layout_marginTop="15dp"
-                    android:background="@drawable/button_background"
-                    android:padding="8dp"
-                    android:scaleType="centerCrop"
-                    app:srcCompat="@drawable/arrow"
-                    app:tint="@color/white"
-                    android:onClick="R1"/>
-            </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textView4"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:layout_marginStart="10dp"
+                                android:layout_weight="1"
+                                android:fontFamily="sans-serif-medium"
+                                android:text="Reference Number: LRCDR-00002"
+                                android:textColor="@color/white"
+                                android:textSize="16sp" />
+
+                            <ImageView
+                                android:id="@+id/imageView"
+                                android:layout_width="45dp"
+                                android:layout_height="45dp"
+                                android:layout_gravity="center"
+                                android:background="@drawable/button_background"
+                                android:onClick="R1"
+                                android:padding="8dp"
+                                android:scaleType="centerCrop"
+                                app:srcCompat="@drawable/arrow"
+                                app:tint="@color/white" />
+
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
+            </ScrollView>
         </LinearLayout>
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
