--- a/app/src/main/res/layout/activity_reservation_details.xml
+++ b/app/src/main/res/layout/activity_reservation_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -11,67 +11,80 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="350dp"
-                android:layout_height="37dp"
-                android:layout_marginTop="30dp"
-                app:cardBackgroundColor="#927d52">
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="21dp"
+            app:cardBackgroundColor="#927d52">
 
-                <TextView
-                    android:id="@+id/receipt_text3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="8dp"
-                    android:text="Reservation Reference Number"
-                    android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:textSize="18sp"/>
-            </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/receipt_text3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:text="Reservation Reference Number"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/receipt_reference_number_container"
-                android:layout_width="350dp"
-                android:layout_height="76dp"
-                app:cardBackgroundColor="#161f48">
+        <androidx.cardview.widget.CardView
+            android:id="@+id/receipt_reference_number_container"
+            android:layout_width="match_parent"
+            android:layout_height="76dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginEnd="21dp"
+            app:cardBackgroundColor="#161f48">
 
-                <TextView
-                    android:id="@+id/reservation_details_ref_number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="90dp"
-                    android:layout_marginTop="20dp"
-                    android:text="LRDCDR-00001"
-                    android:textColor="@color/white"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-            </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/reservation_details_ref_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="90dp"
+                android:layout_marginTop="20dp"
+                android:text="LRDCDR-00001"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="350dp"
-                android:layout_height="37dp"
-                android:layout_marginTop="10dp"
-                app:cardBackgroundColor="#927d52">
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="21dp"
+            app:cardBackgroundColor="#927d52">
 
-                <TextView
-                    android:id="@+id/reminders_text3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_gravity="center_horizontal"
-                    android:text="Reservation Details"
-                    android:textColor="@color/white"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-            </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/reminders_text3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:text="Reservation Details"
+                android:textColor="@color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="21dp"
+            android:layout_marginEnd="21dp">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/reminders_cardview_typing_area"
-                android:layout_width="350dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 app:cardBackgroundColor="#161f48">
 
                 <LinearLayout
@@ -104,7 +117,7 @@
                             android:ems="10"
                             android:text="Artiaga, Angel Reign"
                             android:textColor="@color/white"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -122,8 +135,8 @@
                             android:layout_marginTop="5dp"
                             android:text="User Type:"
                             android:textColor="@color/white"
-                            android:textStyle="bold"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/reservation_details_edittext_usertype"
@@ -134,7 +147,7 @@
                             android:ems="10"
                             android:text="Student"
                             android:textColor="@color/white"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -151,8 +164,8 @@
                             android:layout_marginTop="5dp"
                             android:text="College:"
                             android:textColor="@color/white"
-                            android:textStyle="bold"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/value_college"
@@ -163,7 +176,7 @@
                             android:ems="10"
                             android:text="SET"
                             android:textColor="@color/white"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -180,8 +193,8 @@
                             android:layout_marginTop="5dp"
                             android:text="ID No.:"
                             android:textColor="@color/white"
-                            android:textStyle="bold"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/reservation_details_edittext_idnum"
@@ -192,7 +205,7 @@
                             android:ems="10"
                             android:text="2023-132332"
                             android:textColor="@color/white"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -210,8 +223,8 @@
                             android:layout_marginTop="5dp"
                             android:text="Contoact no.:"
                             android:textColor="@color/white"
-                            android:textStyle="bold"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/reservation_details_edittext_contactnum"
@@ -222,7 +235,7 @@
                             android:ems="10"
                             android:text="09271129719"
                             android:textColor="@color/white"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -240,8 +253,8 @@
                             android:layout_marginTop="5dp"
                             android:text="Date Requested:"
                             android:textColor="@color/white"
-                            android:textStyle="bold"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/reservation_details_edittext_datereq"
@@ -252,7 +265,7 @@
                             android:ems="10"
                             android:text="12/08/24"
                             android:textColor="@color/white"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp" />
 
                     </LinearLayout>
 
@@ -270,8 +283,8 @@
                             android:layout_marginTop="5dp"
                             android:text="Purpose/Activity:"
                             android:textColor="@color/white"
-                            android:textStyle="bold"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/reservation_details_edittext_purpose_activity"
@@ -282,7 +295,7 @@
                             android:ems="10"
                             android:text="Group Meeting"
                             android:textColor="@color/white"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp" />
 
                     </LinearLayout>
 
@@ -300,8 +313,8 @@
                             android:layout_marginTop="5dp"
                             android:text="Schedule:"
                             android:textColor="@color/white"
-                            android:textStyle="bold"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/reservation_details_edittext_purpose_sched"
@@ -312,7 +325,7 @@
                             android:ems="10"
                             android:text="12/12/24"
                             android:textColor="@color/white"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp" />
 
                     </LinearLayout>
 
@@ -331,8 +344,9 @@
                             android:ems="10"
                             android:text="1:00PM to 5:00PM (4hrs)"
                             android:textColor="@color/white"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp" />
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -348,7 +362,7 @@
                             android:ems="10"
                             android:text="Room No. 2 (1 Room)"
                             android:textColor="@color/white"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -365,8 +379,8 @@
                             android:layout_marginTop="5dp"
                             android:text="No. of table/s:"
                             android:textColor="@color/white"
-                            android:textStyle="bold"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/reservation_details_edittext_num_of_tables"
@@ -377,7 +391,7 @@
                             android:ems="10"
                             android:text="1"
                             android:textColor="@color/white"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp" />
 
                     </LinearLayout>
 
@@ -397,8 +411,8 @@
                             android:layout_marginBottom="5dp"
                             android:text="No. of chair/s:"
                             android:textColor="@color/white"
-                            android:textStyle="bold"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/reservation_details_edittext_num_of_chairs"
@@ -409,19 +423,22 @@
                             android:ems="10"
                             android:text="1"
                             android:textColor="@color/white"
-                            android:textSize="17sp"/>
+                            android:textSize="17sp" />
 
                     </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+        </ScrollView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/reservationCancelled"
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="76dp"
+            android:layout_marginStart="21dp"
             android:layout_marginTop="10dp"
-            app:cardBackgroundColor="@color/cancel"
-            android:visibility="gone">
+            android:layout_marginEnd="21dp"
+            android:visibility="gone"
+            app:cardBackgroundColor="@color/cancel">
 
             <TextView
                 android:id="@+id/res_cancelled"
@@ -435,34 +452,34 @@
                 android:textStyle="bold" />
         </androidx.cardview.widget.CardView>
 
-            <LinearLayout
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/reminders_button_back"
+                android:layout_width="100dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#161f48"
+                android:onClick="btn_reservation_details_back"
+                android:text="Back"
+                android:textSize="16sp"
+                app:cornerRadius="10dp" />
+
+            <Button
+                android:id="@+id/btn_cancel_reservation"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/reminders_button_back"
-                    android:layout_width="100dp"
-                    android:layout_height="60dp"
-                    android:layout_marginTop="10dp"
-                    android:backgroundTint="#161f48"
-                    android:text="Back"
-                    android:textSize="16sp"
-                    app:cornerRadius="10dp"
-                    android:onClick="btn_reservation_details_back"/>
-
-                <Button
-                    android:id="@+id/btn_cancel_reservation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="60dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="10dp"
-                    android:backgroundTint="#927d52"
-                    android:text="Cancel Reservation"
-                    android:textSize="16sp"
-                    app:cornerRadius="10dp"
-                    android:onClick="btn_reservation_cancel"/>
-            </LinearLayout>
+                android:layout_height="60dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#927d52"
+                android:onClick="btn_reservation_cancel"
+                android:text="Cancel Reservation"
+                android:textSize="16sp"
+                app:cornerRadius="10dp" />
+        </LinearLayout>
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
