--- a/app/src/main/res/layout/activity_admin_history_details.xml
+++ b/app/src/main/res/layout/activity_admin_history_details.xml
@@ -222,7 +222,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="12/08/24"
+                        android:text="Wednesday, January 15"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
 
@@ -281,7 +281,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
-                        android:text="12/12/24"
+                        android:layout_marginEnd="5dp"
+                        android:text="Friday, January 17"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
 
@@ -374,7 +375,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="1"
+                        android:text="6"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
 
@@ -419,8 +420,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="15dp"
+                        android:layout_marginEnd="5dp"
                         android:ems="10"
-                        android:text="Nov. 20, 2024"
+                        android:text="Wednesday, January 15"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -446,7 +448,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
-                        android:text="12/12/24"
+                        android:text="Friday, January 17"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
