--- a/app/src/main/res/layout/activity_admin_reservation_history.xml
+++ b/app/src/main/res/layout/activity_admin_reservation_history.xml
@@ -64,7 +64,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="sans-serif-medium"
-                android:text="Upcoming Reservations"
+                android:text="Reservation History"
                 android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="italic" />
