--- a/app/src/main/res/layout/activity_admin_update_status.xml
+++ b/app/src/main/res/layout/activity_admin_update_status.xml
@@ -158,7 +158,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="2023-132332"
+                        android:text="2023-134442"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -188,7 +188,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="09271129719"
+                        android:text="09271129799"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -217,8 +217,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
+                        android:layout_marginEnd="5dp"
                         android:ems="10"
-                        android:text="12/08/24"
+                        android:text="Thursday, January 16"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
 
@@ -277,7 +278,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
-                        android:text="12/12/24"
+                        android:text="Friday, January 17"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
 
@@ -294,7 +295,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="100dp"
-                        android:text="1:00PM to 5:00PM (4hrs)"
+                        android:text="7:00 AM to 10:00 AM (3hrs)"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -370,7 +371,7 @@
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="5dp"
                         android:ems="10"
-                        android:text="1"
+                        android:text="5"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
 
@@ -415,8 +416,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:layout_marginTop="15dp"
+                        android:layout_marginEnd="5dp"
                         android:ems="10"
-                        android:text="Nov. 20, 2024"
+                        android:text="Thursday, January 16"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -442,7 +444,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
-                        android:text="12/12/24"
+                        android:text="Friday, January 17"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
                 </LinearLayout>
@@ -458,7 +460,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="100dp"
                         android:layout_marginTop="5dp"
-                        android:text="1:00PM to 5:00PM (4hrs)"
+                        android:text="7:00 AM to 10:00 AM (3hrs)"
                         android:textColor="@color/white"
                         android:textSize="16dp" />
 
